# psurvey

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
algo/: tax.py
benchmark/: nspeed_test
benchmark/nv-benchmark/: CMakeLists.txt
benchmark/nv-benchmark/src/: CMakeLists.txt  CuteCopyBasic.h  copy.cu  cute_copy.cu  demo.cu  device_vector.h  gemm.cu  reduce.cu  transpose.cu
benchmarks/cuda/: CMakeLists.txt
benchmarks/cuda-mem/: CMakeLists.txt  demo.cu
benchmarks/cuda-mem/src/: CMakeLists.txt  copy_throughput.cu
benchmarks/cuda/src/: CMakeLists.txt  copy_throughput.cu
cpp/blas/: CMakeLists.txt  demo.cc
cpp/buffer/: BoundedPacketBuffer.h  Buffer.h  DynamicBuffer.h  FixedBuffer.h  Makefile  PacketBuffer.h  README.md  (+3 more)
cpp/cuda-demo/: CMakeLists.txt  demo.cu
cpp/doctest-demo/: CMakeLists.txt  fib.cc
cpp/event-loop/: CMakeLists.txt  EventLoop.h  Socket.h  demo.cc
cpp/gobject-demo/: CMakeLists.txt  TAddable.cc  TAddable.h  TInt.cc  TInt.h  TNumber.cc  TNumber.h  demo.cc
cpp/gsl/: CMakeLists.txt  demo.cc
cpp/imgui-demo/: CMakeLists.txt
cpp/imgui-demo/cmake/: Findglfw.cmake  Findimgui.cmake
cpp/imgui-demo/src/: CMakeLists.txt  main.cc
cpp/int-eval/: CMakeLists.txt  demo.cc
cpp/perfetto-demo/: CMakeLists.txt  main.cc
cpp/perfetto-demo/tests/: demo.proto  demo.text
cpp/protobuf/: CMakeLists.txt  demo.cc  demo.proto  foo.proto
cuda/: CMakeLists.txt  common.h  inc.cu  kernel2ptx.cc  ptx_jit.cc  reduce.cu  zero_copy.cu
degine/: CMakeLists.txt
degine/degine/: DegineContext.h  Engine.h  Loader.h  ONNXLoader.h  degine.cc  degine.h
degine/degine/ir/: Model.h
degine/example/: CMakeLists.txt
degine/example/add/: CMakeLists.txt  main.cc
degine/example/hello/: CMakeLists.txt  main.cc
degine/example/hello_world/: CMakeLists.txt  main.cc
gkernels/: CMakeLists.txt  gemm_cublas.cu
gpu/: CMakeLists.txt
learn-by-demo/cccl-demo/: CMakeLists.txt
learn-by-demo/cpm-demo/: CMakeLists.txt
learn-by-demo/cpp-demo/: CMakeLists.txt  HandleHolder.cc  finally.cc
learn-by-demo/cpp-demo/src/: CMakeLists.txt  doctest_demo.cc  ec_demo.cc  finally.cc
learn-by-demo/cudnn-frontend-demo/: CMakeLists.txt  gemm.cc  gemm.cu  utils.h
learn-by-demo/cutlass-demo/: CMakeLists.txt  copy.cu  device_vector.cuh  gemm.cu
learn-by-demo/ebpf-demo/: CMakeLists.txt
learn-by-demo/ebpf-demo/cmake/: Findblazesym.cmake  Findbpf.cmake
learn-by-demo/ebpf-demo/src/: CMakeLists.txt  bootstrap.bpf.c  bootstrap.cc  bootstrap.h  execsnoop.bpf.c  execsnoop.cc  execsnoop.h  kprobe.bpf.c  kprobe.cc  kprobe_common.h  minimal.bpf.c  minimal.c  uprobe.bpf.c  uprobe.cc  uprobe.h  utils.h
learn-by-demo/imgui-demo/: CMakeLists.txt
learn-by-demo/imgui-demo/cmake/: Findimgui.cmake
learn-by-demo/imgui-demo/src/: demo.cc
learn-by-demo/mlir-demo/: CMakeLists.txt
learn-by-demo/mlir-demo/cmake/: MLIR.cmake
learn-by-demo/mlir-demo/example/: CMakeLists.txt  demo.cc  demo.mlir
learn-by-demo/mlir-demo/example/demo/: CMakeLists.txt  demo.cc  main.cc
learn-by-demo/mlir-demo/src/: CMakeLists.txt
learn-by-demo/mlir-demo/src/Demo/: CMakeLists.txt  Demo.h
learn-by-demo/mlir-demo/src/Demo/Conversion/: CMakeLists.txt  DemoToLLVM.cpp  DemoToLLVM.h
learn-by-demo/mlir-demo/src/Demo/IR/: CMakeLists.txt  DemoOps.cc  DemoOps.h
learn-by-demo/mlir-demo/src/demo/: demo.cc
learn-by-demo/mlir-demo/src/mlir/Demo/: Demo.h
learn-by-demo/mlir-demo/src/mlir/Demo/IR/: CMakeLists.txt  DemoOps.cpp  DemoOps.h  DemoOps.td
learn-by-demo/mlir-demo/src/mlir/Demo/Transforms/: CMakeLists.txt  DemoNormalizePass.cc  Passes.h  Passes.td
learn-by-demo/mlir-demo/src/toy/: CMakeLists.txt
learn-by-demo/mlir-demo/src/toy/Conversion/: CMakeLists.txt
learn-by-demo/mlir-demo/src/toy/Conversion/ToyToLLVM/: CMakeLists.txt  ToyConstantOpLoweringPass.cpp  ToyConstantOpLoweringPass.h  ToyToLLVM.cpp  ToyToLLVM.h  ToyToLLVMLoweringPass.cpp  ToyToLLVMLoweringPass.h
learn-by-demo/mlir-demo/src/toy/IR/: CMakeLists.txt  ToyOps.cpp  ToyOps.h
learn-by-demo/mlir-demo/src/toy/Tool/: CMakeLists.txt  demo.cc  demo.mlir
learn-by-demo/mlir-demo/tests/: demo.mlir  gpu-to-cubin.mlir
learn-by-demo/mlir-demo/toy/Conversion/ToyToLLVM/: CMakeLists.txt
learn-by-demo/mlir-demo/toy/IR/: ToyOps.cpp  ToyOps.h  ToyOps.td
learn-by-demo/pybind11-demo/: CMakeLists.txt  demo.cc  pyproject.toml
learn-by-demo/tensorrt-demo/: CMakeLists.txt  README.md  demo.cc  torch2onnx.py
learn-by-demo/tensorrt-demo/cmake/: Findnvinfer.cmake
linux/ebpf/: .gitignore  CMakeLists.txt  Makefile  example.bpf.c  example.cc  kprobe.bpf.c  kprobe.cc  vmlinux.h  xdp_router.bpf.c
linux/ebpf/cmake/: Findbpf.cmake
linux/perf-counter/: .gitignore  CMakeLists.txt
linux/perf-counter/src/: PerfMonitor.h  Rate.h  common.h  main.cc
llvm/: .gitignore  CMakeLists.txt
llvm/fibonacci/: CMakeLists.txt  fib.ll
llvm/ir-parser/: CMakeLists.txt  main.cpp
llvm/ir2lib/: CMakeLists.txt
llvm/jit/: CMakeLists.txt  main.cc
llvm/ljit-fibonacci/: main.cpp
llvm/llvm-jit/: CMakeLists.txt  main.cc
llvm/llvm-module2lib/: CMakeLists.txt  main.cc
llvm/m-runner/: CMakeLists.txt  main.cc  print.mlir
llvm/mlir-demo/: CMakeLists.txt
llvm/mlir-demo/demo/IR/: CMakeLists.txt  Demo.td  DemoDialect.cpp  DemoDialect.h  DemoOps.cpp  DemoOps.h  DemoOps.td
llvm/mlir-demo/demo/Transforms/: CMakeLists.txt  Passes.cpp  Passes.h  Passes.td
llvm/mlir-demo/tools/: CMakeLists.txt
llvm/mlir-demo/tools/demo-opt/: CMakeLists.txt  main.cpp
llvm/mlir-dialect/: CMakeLists.txt  main.cc
llvm/mlir-dialect/Demo/: CMakeLists.txt
llvm/mlir-dialect/Demo/IR/: CMakeLists.txt  Demo.cpp  Demo.h  Demo.td
llvm/mlir-dialect/Demo/Transform/: CMakeLists.txt  DemoConversions.h  LowerToAffineLoops.cpp
llvm/mlir-parser/: CMakeLists.txt  main.cpp  test.mlir
llvm/mlir-passes/: CMakeLists.txt  main.cpp  nvgpu.mlir  test.mlir
llvm/mlir-translator/: CMakeLists.txt  main.cpp  nvgpu.mlir  test.mlir
llvm/module-maker/: CMakeLists.txt  main.cpp
llvm/passes/: CMakeLists.txt  hello.cpp
python/: yolo-realtime
tools/: m3u8-downloader  onnx-editor.py  stitch-imgs  video2imgs
(+342 files in other folders)
